--- a/view-spectra/package.json
+++ b/view-spectra/package.json
@@ -2,6 +2,17 @@
   "name": "view-spectra",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
+  "build": {
+    "win": {
+      "icon": "build/icon.png",
+      "target": [
+        {
+          "target": "portable"
+        }
+      ]
+    }
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
