--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spectral_viewer",
-  "homepage": "https://yuanyueli.github.io/SpectralVisualization",
+  "homepage": "https://yuanyueli.github.io/MSViewer",
   "version": "0.2.0",
   "private": true,
   "dependencies": {
