--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spectral_viewer",
+  "name": "msviewer",
   "homepage": "https://yuanyueli.github.io/MSViewer",
   "version": "0.2.0",
   "private": true,
