--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: build # The folder the action should deploy.
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
           repository-name: YuanyueLi/yuanyueli.github.io
           target-folder: static/MSViewer
 
